--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -258,6 +258,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rm_notLatin(texto):\n",
+    "    return re.sub(r\"[^a-zA-Z0-9\\u00B5-\\u00FF\\s]\", r\"\", texto)"
+   ]
+  },
+  {
    "source": [
     "## Pipeline Completa"
    ],
@@ -266,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,26 +291,48 @@
     "    output = rm_caracterEspecial(output)\n",
     "    output = rm_digitos(output)\n",
     "    output = rm_travessaoErrado(output)\n",
-    "    return output"
+    "    output = rm_notLatin(output)\n",
+    "    return output.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{{Evento atual|tema=construção}}\n[[Imagem:NicaraguaCanalPanorama.jpg|thumb|Concepção artística do canal proposto, 1899]]\n[[Imagem:1895NicaraguaCanalCartoon.jpg|thumb|Cartum de 1895 defendendo a ação dos EUA para a construção do Canal da Nicarágua.]]\nO '''Canal da Nicarágua''' (espanhol: ''Canal de Nicaragua''), formalmente o '''Canal''' da '''Nicarágua e Projeto de Desenvolvimento''' (também conhecido como '''Grande Canal''' da '''Nicarágua''', ou '''Grande Canal Interoceânico''' foi uma rota de navegação proposta através da Nicarágua para conectar o [[Mar do Caribe]] (e, portanto, o [[Oceano Atlântico]]) com o [[Oceano Pacífico]]. Os cientistas estavam preocupados com o impacto ambiental do projeto, já que o Lago Nicarágua é o principal reservatório de água doce da América Central enquanto a viabilidade do projeto foi questionada por engenheiros e especialistas em navegação.<ref name=\":0\">{{citar web |ultimo= |primeiro= |url=https://www.bloomberg.com/news/articles/2016-03-17/china-slowdown-not-holding-back-nicaragua-canal-contractor-says |titulo=McDonald, Michael D (March 17, 2016). \"China Slowdown Not Holding Back Nicaragua Canal, Contractor Says\". |data= |acessodata= |publicado=BloombergBusiness}}</ref><ref>{{citar web |ultimo= |primeiro= |url=http://www.techtimes.com/articles/37433/20150305/scientists-wary-about-environmental-effects-of-canal-building-project-in-nicaragua.htm |titulo=Passary, Sumit (5 March 2015). \"Scientists Wary About Environmental Effects Of Canal-Building Project In Nicaragua\". |data= |acessodata= |publicado=Tech Times}}</ref> \n\nA construção de um canal usando o Rio San Juan como via de acesso ao [[Lago Nicarágua]] foi proposta pela primeira vez no início da era colonial. Os Estados Unidos abandonaram os [[Tratado Clayton-Bulwer|planos de construir uma hidrovia na Nicarágua]] no início do século 20, depois que compraram as participações francesas no [[Canal do Panamá]].\n\nEm junho de 2013, a Assembleia Nacional da Nicarágua aprovou um projeto de lei para conceder 50 anos de concessão para financiar e gerenciar o projeto para o Canal da Nicarágua Investment Development HK (HKND) chefiada por Wang Jing, um homem de negócios chinês.<ref>{{citar web |ultimo= |primeiro= |url=https://www.bbc.co.uk/news/world-latin-america-23058301 |titulo=\"Nicaragua canal plan not a joke - Chinese businessman\". |data= |acessodata= |publicado=BBC News}}</ref><ref>{{citar web |ultimo= |primeiro= |url=http://www.nicaraguadispatch.com/news/2012/09/nicaragua-taps-china-for-canal-project/5206 |titulo=\"Nicaragua taps China for canal project\". |data= |acessodata= |publicado=Nicaragua dispatch.}}</ref><ref>{{citar web |ultimo= |primeiro= |url=https://www.theguardian.com/world/2013/jun/06/nicaragua-china-panama-canal |titulo=Watts, Jonathan; Richards, Gareth (6 June 2013). \"Nicaragua gives Chinese firm contract to build alternative to Panama Canal\". |data= |acessodata= |publicado=The Guardian}}</ref> A concessão poderia ter sido prorrogada por mais 50 anos após a entrada em operação da hidrovia.<ref>{{citar web |ultimo= |primeiro= |url=https://online.wsj.com/news/articles/SB10001424127887323734304578543432234604100 |titulo=De Cordoba, Jose (2013-06-13). \"Nicaragua Revives Its Canal Dream\". |data= |acessodata= |publicado=The Wall Street Journal Online}}</ref> \n[[Ficheiro:NicaraguaCanal.5.jpg|miniaturadaimagem|Projeto do Canal da Nicarágua (2014) (linha azul). Estrelas indicam as propostas de Brito e Camilo Locks. A linha vermelha é a fronteira entre a Nicarágua (acima) e a Costa Rica (abaixo).]]\nEm 2015, relatos da mídia sugeriram que o projeto seria adiado e possivelmente cancelado porque a riqueza pessoal de Wang diminuiu muito como resultado do crash do mercado de ações chinês em 2015-16.<ref name=\":0\" /><ref>South China Morning Post 2015/11/28 \"Chinese company postpones US$50 billion canal project in Nicaragua as chairman’s personal fortune tumbles\"</ref> \"Grandes obras\", como dragagem, deveriam ocorrer após o acabamento de um cais do Oceano Pacífico, cuja construção estava planejada para começar no final de 2016.<ref name=\":0\" /> O governo da [[Nicarágua]] não apresentou informações confiáveis ​​sobre se ou não o projeto pode ser financiado, levantando-se dúvidas sobre se seria concluído.<ref>{{citar web |ultimo= |primeiro= |url=https://www.reuters.com/article/2014/12/26/us-nicaragua-canal-idUSKBN0K410620141226 |titulo=\"Doubts deepen over Chinese-backed Nicaragua canal as work starts\". |data= |acessodata= |publicado=Reuters.}}</ref><ref>{{citar web |ultimo= |primeiro= |url=http://www.scmp.com/business/companies/article/1681680/doubts-raised-over-nicaraguan-canal-project-trade-patterns-shift |titulo=\"Doubts raised over Nicaraguan canal project as trade patterns shift\". |data= |acessodata= |publicado=South China Morning Post.}}</ref> O Grupo HKND afirmou que o financiamento viria de dívidas e vendas de ações e uma potencial oferta pública inicial (IPO).<ref name=\":0\" /> \n\nEm maio de 2017, nenhuma ação concreta havia sido tomada para construir o canal e mais dúvidas foram expressas sobre seu financiamento.<ref>{{citar web |ultimo= |primeiro= |url=https://web.archive.org/web/20170823160624/https://panampost.com/adriana-peralta/2017/05/08/four-years-later-china-backed-nicaragua-canal-struggles-to-take-off-the-ground/ |titulo=Adriana Peralta (May 8, 2017). \"Four Years Later, China-Backed Nicaragua Canal Struggles to Take Off the Ground\". |data= |acessodata= |publicado=PanAm Post}}</ref>  Em fevereiro de 2018, os analistas consideraram amplamente o projeto como extinto,<ref>{{citar web |ultimo= |primeiro= |url=https://www.opendemocracy.net/democraciaabierta/beverly-goldberg/is-nicaraguan-mega-canal-failure-good-news-for-indigenous-communi |titulo=Is the Nicaraguan mega-canal failure good news for indigenous communities? |data= |acessodata= |publicado=Beverly Goldberg, Open Democracy.}}</ref> embora o chefe do projeto insistisse que o trabalho estava em andamento<ref>{{citar web |ultimo= |primeiro= |url=https://www.elfinancierocr.com/economia-y-politica/incertidumbres-financieras-desvanecen-sueno-de/7HFF44CY3RBVVE7BR3YRKJ3XZY/story/ |titulo=Incertidumbres financieras desvanecen sueño de canal en Nicaragua. |data= |acessodata= |publicado=El Financiero. AFP}}</ref> e o HKND reteve os direitos legais de concessão para o canal, bem como projetos laterais.<ref>{{citar web |ultimo= |primeiro= |url=http://www.tampabay.com/ap-explains-nicaragua-pension-changes-ignite-fiery-protests-ap_worldf7ec735f59954b0b8f9e4c8bdf97e130 |titulo=\"AP Explains: Nicaragua pension changes ignite fiery protests\". |data= |acessodata= |publicado=AP}}</ref> Apesar do desaparecimento do HKND, o governo da Nicarágua indica que prosseguirá com as desapropriações de 908 km<sup>2</sup> em terras secas em qualquer lugar da Nicarágua, de acordo com a Lei 840 do Canal de expropriação de terras.\n\n== Construção ==\nNenhuma construção significativa ocorreu.<ref>Watts, Jonathan (November 24, 2016). [https://www.theguardian.com/world/2016/nov/24/nicaragua-canal-interoceanic-preparations \"Nicaragua canal: in a sleepy Pacific port, something stirs\"]. ''The Guardian''. ISSN 0261-3077.</ref>\n\n== Ver também ==\n* [[Canal de Suez]]\n* [[Canal do Panamá]]\n* [[Canal da Guatemala]]\n* [[Istmo centro-americano]]\n* [[Rota de comércio]]\n* [[Transporte marítimo]]\n* [[Canal da Tailândia]]\n\n== Referências ==\n<references />\n\n\n\n\n\n{{Esboço-história}}\n{{Portal3|Geografia|Nicarágua|América Central}}\n\n{{DEFAULTSORT:Canal Da Nicaragua}}\n[[Categoria:Geografia da Nicarágua]]\n[[Categoria:História da Nicarágua]]\n[[Categoria:Guerras das Bananas]]\n"
+      "\n\nalexandre é um prenome popular da língua portuguesa  é cognato ao nome alexander  da língua inglesa  em países lusófonos  pessoas chamadas alexandre são normalmente apelidadas de alex \n\n   origem   \no nome deriva do latim alexander  romanização do nome grego   aléksandros   etimologicamente  o nome seria um composto do verbo   aléksein   defender  e o substantivo   andrós   genitivo de   anr   homem  assim  pode ser traduzido como protetor da humanidade \n\no termo seria ou um tipo raro de composto tatpurusha invertido  com o modificante na segunda posição  o tatpurusha cognato em sânscrito sendo  nararaka  cf  ramayana     o equivalente exato em sânscrito seria  rakinara  do pie hleks i hnros  ou um composto gasto do tipo terpsimbrotos  cujo significado original seria ele protege os homens \n\no primeiro registro conhecido do nome foi feito no grego micênico  encontrouse a versão feminina do nome  alexandra  escrito em linear b \n\no nome era um dos títulos  epítetos  dados à deusa grega hera  na ilíada  o personagem páris também é conhecido como alexandre  a popularidade do nome se espalhou pelo mundo grego através das conquistas militares do rei alexandre iii da macedônia  comumente chamado de alexandre  o grande  posteriormente  diversos alexandres receberam seus nomes em homenagem direta ou indireta a ele \n\nna rússia o nome era razoavelmente raro até o período do czar alexandre i da rússia  a partir do qual se tornou um dos primeiros nomes mais comuns do país  ganhando um número considerável de variações e abreviações \n\n   variações em outros idiomas   \n  albanês   aleksandër  aleks  leka i madh  lekë  no norte da albânia   sandër  skëndër  skander  ver skanderbeg \n  amárico   eskender\n  árabe        iskandar   skandar  skender\n  bielorrusso   p  aliaksandr   e  ales     alyelka \n  catalão   alexandre  àlex  xandre\n  inglês   alexander  alec  alex  sandy  andy  alexis  alexa  sandra  xander\n  gaélico escocês   alasdair  alastair  alistair  alisdair\n  galego   alexandre  álex\n  georgiano     alexandre     aleko     lekso     sandro \n  hebraico     alexander \n  hindi   hindustani   sikandar\n  iídiche      sender  senderl\n  irlandês   alasandar\n  italiano   alessandro  leandro  ale  sandro  alessio  lissandro\n  malaio   iskandar\n  língua malaiala        chandy \n  maltês   lixandru\n  quirguiz     skender \n  persa     eskandar \n  russo     alexandr \n  sânscrito   alekchendra\n  ucraniano     oleksandr \n  urdu   skender  sikandar  sikander  sikandereazam é alexandre  o grande \n  uzbeque   iskandar\n  turco iskander\n\n   pessoas   \n  alexandre de afrodísias  filósofo da escola peripatética\n  alexandre da macedônia \n  alexandre de gusmão\n  alexandre balas\n  alexandre de mindos\n  alexandre i da iugoslávia\n  alexandre ii karadjordjevitch chefe da casa de karaorevi da sérvia\n  papa alexandre cognome de vários papas  como santo alexandre\n  alexandre da rússia cognome de vários imperadores da rússia  alexandre i da rússia   alexandre ii da rússia   alexandre iii da rússia \n  alexandre da escócia cognome de vários reis da escócia  alexandre i da escócia   alexandre ii da escócia   alexandre iii da escócia \n  alexis ii  patriarca de moscou \n  santo alexandre cognome de vários santos e mártires\n\n   filmes   \n  alexandre  o grande coprodução hispanoestadunidense de  \n  alexandre produção estadunidense de  \n\n\n\n\n\ncategoria prenomes\n"
      ]
     }
    ],
    "source": [
-    "print(data[1313][\"body\"])"
+    "print(limpa_textos(data[0][\"body\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def define_palavras(docs):\n",
+    "    output = {}\n",
+    "    for doc in docs:\n",
+    "        for key in output.keys():\n",
+    "            output[key][\"Found\"] = False\n",
+    "        words = limpa_textos(doc[\"body\"]).split()\n",
+    "        for word in words:\n",
+    "            if word in output.keys():\n",
+    "                output[word][\"Abs. Freq.\"] += 1\n",
+    "                if not output[word][\"Found\"]:\n",
+    "                    output[word][\"Doc. Freq.\"] += 1\n",
+    "                    output[word][\"Found\"] = True\n",
+    "            else:\n",
+    "                output[word] = {\"Abs. Freq.\" : 1, \"Doc. Freq.\" : 1, \"Found\" : True}\n",
+    "    return output"
    ]
   },
   {
@@ -312,12 +344,36 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\nConcepção artística do canal proposto  \nCartum de  defendendo a ação dos EUA para a construção do Canal da Nicarágua \nO Canal da Nicarágua  espanhol  Canal de Nicaragua   formalmente o Canal da Nicarágua e Projeto de Desenvolvimento  também conhecido como Grande Canal da Nicarágua  ou Grande Canal Interoceânico foi uma rota de navegação proposta através da Nicarágua para conectar o Mar do Caribe  e  portanto  o Oceano Atlântico  com o Oceano Pacífico  Os cientistas estavam preocupados com o impacto ambiental do projeto  já que o Lago Nicarágua é o principal reservatório de água doce da América Central enquanto a viabilidade do projeto foi questionada por engenheiros e especialistas em navegação  \n\nA construção de um canal usando o Rio San Juan como via de acesso ao Lago Nicarágua foi proposta pela primeira vez no início da era colonial  Os Estados Unidos abandonaram os planos de construir uma hidrovia na Nicarágua no início do século   depois que compraram as participações francesas no Canal do Panamá \n\nEm junho de   a Assembleia Nacional da Nicarágua aprovou um projeto de lei para conceder  anos de concessão para financiar e gerenciar o projeto para o Canal da Nicarágua Investment Development HK  HKND  chefiada por Wang Jing  um homem de negócios chinês  \nProjeto do Canal da Nicarágua     linha azul   Estrelas indicam as propostas de Brito e Camilo Locks  A linha vermelha é a fronteira entre a Nicarágua  acima  e a Costa Rica  abaixo  \nEm   relatos da mídia sugeriram que o projeto seria adiado e possivelmente cancelado porque a riqueza pessoal de Wang diminuiu muito como resultado do crash do mercado de ações chinês em -  O Grupo HKND afirmou que o financiamento viria de dívidas e vendas de ações e uma potencial oferta pública inicial  IPO   \n\nEm maio de   nenhuma ação concreta havia sido tomada para construir o canal e mais dúvidas foram expressas sobre seu financiamento  Apesar do desaparecimento do HKND  o governo da Nicarágua indica que prosseguirá com as desapropriações de   em terras secas em qualquer lugar da Nicarágua  de acordo com a Lei  do Canal de expropriação de terras \n\n   Construção   \nNenhuma construção significativa ocorreu \n\n   Ver também   \n  Canal de Suez\n  Canal do Panamá\n  Canal da Guatemala\n  Istmo centroamericano\n  Rota de comércio\n  Transporte marítimo\n  Canal da Tailândia\n\n   Referências   \n\n\n\n\n\n\n\n\n\n\nCategoria Geografia da Nicarágua\nCategoria História da Nicarágua\nCategoria Guerras das Bananas\n"
+      "159980\n"
      ]
     }
    ],
    "source": [
-    "print(limpa_textos(data[1313][\"body\"]))"
+    "%%time\n",
+    "palavras = define_palavras(data)\n",
+    "print(len(palavras))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "alexandre : {'Abs. Freq.': 402, 'Doc. Freq.': 119, 'Found': False}\né : {'Abs. Freq.': 23908, 'Doc. Freq.': 8466, 'Found': False}\num : {'Abs. Freq.': 27342, 'Doc. Freq.': 6898, 'Found': False}\nprenome : {'Abs. Freq.': 6, 'Doc. Freq.': 6, 'Found': False}\npopular : {'Abs. Freq.': 534, 'Doc. Freq.': 350, 'Found': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "for key in palavras.keys():\n",
+    "    print(f\"{key} : {palavras[key]}\")\n",
+    "    i += 1\n",
+    "    if i >= 5:\n",
+    "        break"
    ]
   },
   {
