--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -20,13 +20,20 @@
    ]
   },
   {
+   "source": [
+    "## Lendo o dump de documentos"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Numero de documentos: 11225\n"
      ]
@@ -47,8 +54,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "dict_keys(['title', 'body'])\n"
      ]
@@ -130,6 +137,13 @@
    ]
   },
   {
+   "source": [
+    "## Função para remover as ocorrências de ```{|...|}```"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -162,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Função para remover as as ocorrências de ```<ref>...</ref>```"
+    "## Função para remover as ocorrências de ```<ref>...</ref>```"
    ]
   },
   {
@@ -174,6 +188,13 @@
     "def rm_refs(texto):\n",
     "    return re.sub(r\"<ref.*>.*</ref>|<ref.*>|</ref>\", \"\", texto)"
    ]
+  },
+  {
+   "source": [
+    "## Função pare remover as demais ocorrências de tags HTML"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -203,15 +224,29 @@
    ]
   },
   {
+   "source": [
+    "## Função para remover caracteres de pontuação ou semelhantes"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rm_caracterEspecial(texto):\n",
+    "def rm_caracterPontuacao(texto):\n",
     "    sem_travessao = re.sub(r\"\\s\\-\\s|\\-\\-+\", \" \", texto)\n",
     "    return re.sub(r\"[^\\w\\s\\-]\", \" \", sem_travessao)"
    ]
+  },
+  {
+   "source": [
+    "## Função para remover as palavras que contém números"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -224,6 +259,13 @@
    ]
   },
   {
+   "source": [
+    "## Função para remover os travessões não hífen"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -232,6 +274,13 @@
     "def rm_travessaoErrado(texto):\n",
     "    return re.sub(r\"(\\w+)\\-|\\-(\\w+)\", r\"\\1\\2\", texto)"
    ]
+  },
+  {
+   "source": [
+    "## Função para remover palavras contendo caracteres fora do alfabeto português"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -264,7 +313,7 @@
     "    output = rm_templates(output)\n",
     "    output = rm_templates2(output)\n",
     "    output = rm_aspas(output)\n",
-    "    output = rm_caracterEspecial(output)\n",
+    "    output = rm_caracterPontuacao(output)\n",
     "    output = rm_digitos(output)\n",
     "    output = rm_travessaoErrado(output)\n",
     "    output = rm_notLatin(output)\n",
@@ -272,85 +321,35 @@
    ]
   },
   {
+   "source": [
+    "## Exemplo do resultado da limpeza"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "\n",
-      "\n",
-      "alexandre é um prenome popular da língua portuguesa  é cognato ao nome alexander  da língua inglesa  em países lusófonos  pessoas chamadas alexandre são normalmente apelidadas de alex \n",
-      "\n",
-      "   origem   \n",
-      "o nome deriva do latim alexander  romanização do nome grego   aléksandros   etimologicamente  o nome seria um composto do verbo   aléksein   defender  e o substantivo   andrós   genitivo de   anr   homem  assim  pode ser traduzido como protetor da humanidade \n",
-      "\n",
-      "o termo seria ou um tipo raro de composto tatpurusha invertido  com o modificante na segunda posição  o tatpurusha cognato em sânscrito sendo  nararaka  cf  ramayana     o equivalente exato em sânscrito seria  rakinara  do pie hleks i hnros  ou um composto gasto do tipo terpsimbrotos  cujo significado original seria ele protege os homens \n",
-      "\n",
-      "o primeiro registro conhecido do nome foi feito no grego micênico  encontrouse a versão feminina do nome  alexandra  escrito em linear b \n",
-      "\n",
-      "o nome era um dos títulos  epítetos  dados à deusa grega hera  na ilíada  o personagem páris também é conhecido como alexandre  a popularidade do nome se espalhou pelo mundo grego através das conquistas militares do rei alexandre iii da macedônia  comumente chamado de alexandre  o grande  posteriormente  diversos alexandres receberam seus nomes em homenagem direta ou indireta a ele \n",
-      "\n",
-      "na rússia o nome era razoavelmente raro até o período do czar alexandre i da rússia  a partir do qual se tornou um dos primeiros nomes mais comuns do país  ganhando um número considerável de variações e abreviações \n",
-      "\n",
-      "   variações em outros idiomas   \n",
-      "  albanês   aleksandër  aleks  leka i madh  lekë  no norte da albânia   sandër  skëndër  skander  ver skanderbeg \n",
-      "  amárico   eskender\n",
-      "  árabe        iskandar   skandar  skender\n",
-      "  bielorrusso   p  aliaksandr   e  ales     alyelka \n",
-      "  catalão   alexandre  àlex  xandre\n",
-      "  inglês   alexander  alec  alex  sandy  andy  alexis  alexa  sandra  xander\n",
-      "  gaélico escocês   alasdair  alastair  alistair  alisdair\n",
-      "  galego   alexandre  álex\n",
-      "  georgiano     alexandre     aleko     lekso     sandro \n",
-      "  hebraico     alexander \n",
-      "  hindi   hindustani   sikandar\n",
-      "  iídiche      sender  senderl\n",
-      "  irlandês   alasandar\n",
-      "  italiano   alessandro  leandro  ale  sandro  alessio  lissandro\n",
-      "  malaio   iskandar\n",
-      "  língua malaiala        chandy \n",
-      "  maltês   lixandru\n",
-      "  quirguiz     skender \n",
-      "  persa     eskandar \n",
-      "  russo     alexandr \n",
-      "  sânscrito   alekchendra\n",
-      "  ucraniano     oleksandr \n",
-      "  urdu   skender  sikandar  sikander  sikandereazam é alexandre  o grande \n",
-      "  uzbeque   iskandar\n",
-      "  turco iskander\n",
-      "\n",
-      "   pessoas   \n",
-      "  alexandre de afrodísias  filósofo da escola peripatética\n",
-      "  alexandre da macedônia \n",
-      "  alexandre de gusmão\n",
-      "  alexandre balas\n",
-      "  alexandre de mindos\n",
-      "  alexandre i da iugoslávia\n",
-      "  alexandre ii karadjordjevitch chefe da casa de karaorevi da sérvia\n",
-      "  papa alexandre cognome de vários papas  como santo alexandre\n",
-      "  alexandre da rússia cognome de vários imperadores da rússia  alexandre i da rússia   alexandre ii da rússia   alexandre iii da rússia \n",
-      "  alexandre da escócia cognome de vários reis da escócia  alexandre i da escócia   alexandre ii da escócia   alexandre iii da escócia \n",
-      "  alexis ii  patriarca de moscou \n",
-      "  santo alexandre cognome de vários santos e mártires\n",
-      "\n",
-      "   filmes   \n",
-      "  alexandre  o grande coprodução hispanoestadunidense de  \n",
-      "  alexandre produção estadunidense de  \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "categoria prenomes\n"
+      "\n\nalexandre é um prenome popular da língua portuguesa  é cognato ao nome alexander  da língua inglesa  em países lusófonos  pessoas chamadas alexandre são normalmente apelidadas de alex \n\n   origem   \no nome deriva do latim alexander  romanização do nome grego   aléksandros   etimologicamente  o nome seria um composto do verbo   aléksein   defender  e o substantivo   andrós   genitivo de   anr   homem  assim  pode ser traduzido como protetor da humanidade \n\no termo seria ou um tipo raro de composto tatpurusha invertido  com o modificante na segunda posição  o tatpurusha cognato em sânscrito sendo  nararaka  cf  ramayana     o equivalente exato em sânscrito seria  rakinara  do pie hleks i hnros  ou um composto gasto do tipo terpsimbrotos  cujo significado original seria ele protege os homens \n\no primeiro registro conhecido do nome foi feito no grego micênico  encontrouse a versão feminina do nome  alexandra  escrito em linear b \n\no nome era um dos títulos  epítetos  dados à deusa grega hera  na ilíada  o personagem páris também é conhecido como alexandre  a popularidade do nome se espalhou pelo mundo grego através das conquistas militares do rei alexandre iii da macedônia  comumente chamado de alexandre  o grande  posteriormente  diversos alexandres receberam seus nomes em homenagem direta ou indireta a ele \n\nna rússia o nome era razoavelmente raro até o período do czar alexandre i da rússia  a partir do qual se tornou um dos primeiros nomes mais comuns do país  ganhando um número considerável de variações e abreviações \n\n   variações em outros idiomas   \n  albanês   aleksandër  aleks  leka i madh  lekë  no norte da albânia   sandër  skëndër  skander  ver skanderbeg \n  amárico   eskender\n  árabe        iskandar   skandar  skender\n  bielorrusso   p  aliaksandr   e  ales     alyelka \n  catalão   alexandre  àlex  xandre\n  inglês   alexander  alec  alex  sandy  andy  alexis  alexa  sandra  xander\n  gaélico escocês   alasdair  alastair  alistair  alisdair\n  galego   alexandre  álex\n  georgiano     alexandre     aleko     lekso     sandro \n  hebraico     alexander \n  hindi   hindustani   sikandar\n  iídiche      sender  senderl\n  irlandês   alasandar\n  italiano   alessandro  leandro  ale  sandro  alessio  lissandro\n  malaio   iskandar\n  língua malaiala        chandy \n  maltês   lixandru\n  quirguiz     skender \n  persa     eskandar \n  russo     alexandr \n  sânscrito   alekchendra\n  ucraniano     oleksandr \n  urdu   skender  sikandar  sikander  sikandereazam é alexandre  o grande \n  uzbeque   iskandar\n  turco iskander\n\n   pessoas   \n  alexandre de afrodísias  filósofo da escola peripatética\n  alexandre da macedônia \n  alexandre de gusmão\n  alexandre balas\n  alexandre de mindos\n  alexandre i da iugoslávia\n  alexandre ii karadjordjevitch chefe da casa de karaorevi da sérvia\n  papa alexandre cognome de vários papas  como santo alexandre\n  alexandre da rússia cognome de vários imperadores da rússia  alexandre i da rússia   alexandre ii da rússia   alexandre iii da rússia \n  alexandre da escócia cognome de vários reis da escócia  alexandre i da escócia   alexandre ii da escócia   alexandre iii da escócia \n  alexis ii  patriarca de moscou \n  santo alexandre cognome de vários santos e mártires\n\n   filmes   \n  alexandre  o grande coprodução hispanoestadunidense de  \n  alexandre produção estadunidense de  \n\n\n\n\n\ncategoria prenomes\n"
      ]
     }
    ],
    "source": [
     "print(limpa_textos(data[0][\"body\"]))"
    ]
+  },
+  {
+   "source": [
+    "## Calcula frequência absoluta de cada palavra"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -376,11 +375,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "159980\n",
-      "Wall time: 16.8 s\n"
+      "159980\nWall time: 19 s\n"
      ]
     }
    ],
@@ -389,6 +387,13 @@
     "palavras = define_palavras(data)\n",
     "print(len(palavras))"
    ]
+  },
+  {
+   "source": [
+    "## Define o vocabulário com as 10 mil palavras mais frequentes"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -409,15 +414,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "LOWERCASE = [chr(x) for x in range(ord('a'), ord('z') + 1)]\n",
-    "UPPERCASE = [chr(x) for x in range(ord('A'), ord('Z') + 1)]\n",
-    "LOWERCASE_OTHERS = ['ç', 'á', 'â', ]  # etc.\n",
-    "UPPERCASE_OTHERS = [x.upper() for x in LOWERCASE_OTHERS]\n",
-    "LETTERS = LOWERCASE + UPPERCASE + LOWERCASE_OTHERS + UPPERCASE_OTHERS\n",
+    "LOWERCASE_OTHERS = ['ç', 'á', 'â', 'é', 'ã', 'õ', 'ê', 'í', 'ú', 'ô', 'ó']  # etc.\n",
+    "LETTERS = LOWERCASE + LOWERCASE_OTHERS\n",
     "\n",
     "def edit1(text):\n",
     "    words = []\n",
@@ -457,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,72 +469,83 @@
     "        candidatos = [palavra]\n",
     "    else:\n",
     "        candidatos = []\n",
-    "    candidatos += \\\n",
-    "        [w for w in edit1(palavra) if w in vocab] \\\n",
-    "        + [w for w in edit2(palavra) if w in vocab] \\\n",
-    "        + [palavra]\n",
+    "        dist1 = [w for w in edit1(palavra) if w in vocab]\n",
+    "        if len(dist1) > 0:\n",
+    "            candidatos += dist1\n",
+    "        else:\n",
+    "            dist2 = [w for w in edit2(palavra) if w in vocab]\n",
+    "            candidatos += dist2 + [palavra]\n",
     "    return candidatos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['alexandria', 'alexandra', 'alexandre', 'alejandro', 'alexander', 'alexandri']\n"
-     ]
-    }
-   ],
-   "source": [
-    "candid = candidatos(\"alexandri\")\n",
-    "print(candid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def melhorPalavra(candidatos):\n",
-    "    melhorP = \"\"\n",
-    "    for i in vocab:\n",
-    "        for e in candidatos:\n",
-    "            if e == i:\n",
-    "                melhorP = e\n",
-    "                return melhorP\n",
-    "    return melhorP"
+    "def corrige(txt):\n",
+    "    frase = txt.split()\n",
+    "    output = \"\"\n",
+    "    for palavra in frase:\n",
+    "        candidates = candidatos(palavra.lower())\n",
+    "        melhorP = \"\"\n",
+    "        found = False\n",
+    "        for i in vocab:\n",
+    "            for e in candidates:\n",
+    "                if e == i:\n",
+    "                    melhorP = e\n",
+    "                    if palavra[0].isupper():\n",
+    "                        output += melhorP.capitalize() + \" \"\n",
+    "                        found = True\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        output += melhorP + \" \"\n",
+    "                        found = True\n",
+    "                        break\n",
+    "            if found:\n",
+    "                break\n",
+    "        if not found:\n",
+    "            output += palavra + \" \"\n",
+    "    return output[:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'alexandre'"
+       "'Três pratos de trigo para três tigre testes'"
       ]
      },
-     "execution_count": 24,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 71
     }
    ],
    "source": [
-    "melhorPalavra(candid)"
+    "corrige(\"Três pratos de trigo para três tigres tristes\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 74
+    }
+   ],
    "source": []
   }
  ],
@@ -551,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
